--- a/Desktop/desktop_lifting_app/package.json
+++ b/Desktop/desktop_lifting_app/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ag-grid-community": "^20.0.0",
+    "ag-grid-react": "^20.0.0",
     "bootstrap": "^4.2.1",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-dom-factories": "^1.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
