--- a/Desktop/desktop_lifting_app/package.json
+++ b/Desktop/desktop_lifting_app/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "ag-grid": "^18.1.2",
     "ag-grid-community": "^20.0.0",
+    "ag-grid-enterprise": "^20.0.0",
     "ag-grid-react": "^20.0.0",
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "react": "^16.7.0",
+    "react-datepicker": "^2.1.0",
     "react-dom": "^16.7.0",
     "react-dom-factories": "^1.0.2",
     "react-router-dom": "^4.3.1",
