--- a/Desktop/desktop_lifting_app/package.json
+++ b/Desktop/desktop_lifting_app/package.json
@@ -17,6 +17,7 @@
     "react-dom-factories": "^1.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-vis": "^1.11.6",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
