--- a/Desktop/desktop_lifting_app/package.json
+++ b/Desktop/desktop_lifting_app/package.json
@@ -10,11 +10,13 @@
     "bootstrap": "^4.2.1",
     "firebase": "^5.8.2",
     "jquery": "^3.3.1",
+    "moment": "^2.24.0",
     "popper.js": "^1.14.7",
     "react": "^16.7.0",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.7.0",
     "react-dom-factories": "^1.0.2",
+    "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-vis": "^1.11.6",
